[package]
name = "iceberg"
version = "0.1.0"
edition = "2021"
description = "Immutable versioned database with git-like branching for data — pure Rust"
license = "MIT"

[[bin]]
name = "iceberg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
